# HSE-2025-2029

./: CMakeLists.txt  main.cpp
2025-2026/Something fun from teacher/: main.cpp
2025-2026/module-1/: CMakeLists.txt
2025-2026/module-1/Fun bits/: CMakeLists.txt  main.cpp
2025-2026/module-1/Hello world/: CMakeLists.txt  main.cpp
2025-2026/module-1/Letter Z/: CMakeLists.txt  main.cpp
2025-2026/module-1/Midterm/: CMakeLists.txt  main.cpp
2025-2026/module-1/Preparing-to-exam/: CMakeLists.txt  main.cpp
2025-2026/module-1/Quiz-2/: CMakeLists.txt  main.cpp
2025-2026/module-1/Something fun from teacher/: CMakeLists.txt
2025-2026/module-1/TicTacToe/: CMakeLists.txt  main.cpp
2025-2026/module-1/Var memory rofls/: CMakeLists.txt  main.cpp
2025-2026/module-1/hw-7/: CMakeLists.txt  main.cpp
2025-2026/module-1/week-2/: CMakeLists.txt  divide.cpp  divide.h  function.cpp  function.h  main.cpp  minus.cpp  minus.h  multiply.cpp  multiply.h  plus.cpp  plus.h  task.md
2025-2026/module-1/week-3/: CMakeLists.txt  main.cpp
2025-2026/module-2/: CMakeLists.txt
2025-2026/module-2/HW-1/: CMakeLists.txt  main.cpp
2025-2026/module-2/enum/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task6.cpp  task7.cpp
2025-2026/module-2/struct/: CMakeLists.txt  task1.cpp  task2.cpp
2025-2026/module-2/week-3/: CMakeLists.txt  main.cpp
2025-2026/module-2/week-4/: CMakeLists.txt  task1.cpp  task2.cpp
