# Агрегатор задач модуля 1
add_subdirectory("Hello world")
add_subdirectory("Fun bits")
add_subdirectory("Letter Z")
add_subdirectory("Something fun from teacher")
add_subdirectory("TicTacToe")
add_subdirectory("Var memory rofls")
add_subdirectory("week-2")
add_subdirectory("week-3")
add_subdirectory("Quiz-2")
add_subdirectory("Preparing-to-exam")
add_subdirectory("Midterm")
add_subdirectory("hw-7")
